[gd_scene load_steps=16 format=3 uid="uid://cyhh2q2rwjxv8"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_8e8ge"]
[ext_resource type="Texture2D" uid="uid://cpqktot470wnm" path="res://Art/Sprites/earthTurtles.png" id="2_0q4fs"]
[ext_resource type="Shader" uid="uid://nsi64iqhsmgj" path="res://Enemies/enemy.tres" id="2_5de2x"]
[ext_resource type="PackedScene" uid="uid://cjd10gcwv0yay" path="res://Utility/hurt_box.tscn" id="3_1hkhu"]
[ext_resource type="PackedScene" uid="uid://crysg8tdrcrgs" path="res://Utility/hit_box.tscn" id="4_37gfe"]
[ext_resource type="AudioStream" uid="uid://cxt8i187y8i8p" path="res://Audio/SFX/hitmarker_2.mp3" id="6_i8cqo"]
[ext_resource type="AudioStream" uid="uid://doo8vy2pve8iw" path="res://Audio/SFX/death_sound_rockshard.mp3" id="7_wh8mf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4c67"]
resource_local_to_scene = true
shader = ExtResource("2_5de2x")
shader_parameter/Enable = false
shader_parameter/Flash = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4o7s"]
size = Vector2(73, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_nhdir"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n4xvk"]
radius = 34.0147

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8j8p"]
size = Vector2(73, 29)

[sub_resource type="Animation" id="Animation_o5chb"]
resource_name = "Hit Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/Enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5yh34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/Enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbuiw"]
_data = {
"Hit Flash": SubResource("Animation_o5chb"),
"RESET": SubResource("Animation_5yh34")
}

[node name="enemy_earthTurtle" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_8e8ge")
movement_speed = 150

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_l4c67")
position = Vector2(-58, -39)
scale = Vector2(0.418, 0.5)
texture = ExtResource("2_0q4fs")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-9.5, 14.5)
shape = SubResource("RectangleShape2D_f4o7s")

[node name="TurtleCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-8, 1)
shape = SubResource("CircleShape2D_nhdir")

[node name="HurtBox" parent="." instance=ExtResource("3_1hkhu")]
light_mask = 4
visibility_layer = 4
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2(-8, 5)
shape = SubResource("CircleShape2D_n4xvk")

[node name="HitBox" parent="." instance=ExtResource("4_37gfe")]
light_mask = 2
visibility_layer = 2
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0" groups=["attack"]]
light_mask = 2
visibility_layer = 2
position = Vector2(-10.5, 16.5)
shape = SubResource("RectangleShape2D_l8j8p")

[node name="HitAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cbuiw")
}

[node name="sfx_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_i8cqo")
volume_db = -6.5

[node name="sfx_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wh8mf")
volume_db = -20.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
